Kubernetes/ai-diagnostics.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-diagnostics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-diagnostics
  template:
    metadata:
      labels:
        app: ai-diagnostics
    spec:
      containers:
        - name: ai-diagnostics
          image: paragrider1/ai-diagnostics-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8086
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: ai-diagnostics
spec:
  selector:
    app: ai-diagnostics
  ports:
    - port: 8086
      targetPort: 8086

# ---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: ai-diagnostics-hpa
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: ai-diagnostics
#   minReplicas: 1
#   maxReplicas: 2
#   metrics:
#     - type: Resource
#       resource:
#         name: cpu
#         target:
#           type: Utilization
#           averageUtilization: 90
