Kubernetes/billing.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing
  template:
    metadata:
      labels:
        app: billing
    spec:
      containers:
        - name: billing
          image: paragrider1/billing-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8087
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: billing
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "8087"
spec:
  selector:
    app: billing
  ports:
    - port: 8087
      targetPort: 8087
