Kubernetes/doctor.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctorservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doctorservice
  template:
    metadata:
      labels:
        app: doctorservice
    spec:
      containers:
        - name: doctor
          image: paragrider1/doctor-service:latest
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: doctorservice # Change this to DOCTORSERVICE
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "8082"

spec:
  type: ClusterIP
  selector:
    app: doctorservice
  ports:
    - port: 8082
      targetPort: 8082

# ---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: doctorservice-hpa
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: doctorservice
#   minReplicas: 1
#   maxReplicas: 2
#   metrics:
#     - type: Resource
#       resource:
#         name: cpu
#         target:
#           type: Utilization
#           averageUtilization: 90
