Kubernetes/patient.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patientservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patientservice
  template:
    metadata:
      labels:
        app: patientservice
    spec:
      containers:
        - name: patientservice
          image: paragrider1/patient-service:latest
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: patientservice
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "8081"
spec:
  type: ClusterIP
  selector:
    app: patientservice
  ports:
    - port: 8081
      targetPort: 8081

# ---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: patientservice-hpa
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: patientservice
#   minReplicas: 1
#   maxReplicas: 2
#   metrics:
#     - type: Resource
#       resource:
#         name: cpu
#         target:
#           type: Utilization
#           averageUtilization: 90
