Kubernetes/rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:management
          ports:
            - containerPort: 5672 # Messaging port
            - containerPort: 15672 # Management console/ dashboardd
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
      nodePort: 30072 # NodePort for AMQP (external access)
    - name: management
      port: 15672
      targetPort: 15672
      nodePort: 31672 # NodePort for Management UI (external access)
  type: NodePort
