Kubernetes/healthcare-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthcare-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: healthcare.local
      http:
        paths:
          - path: /patient(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: patientservice
                port:
                  number: 8081

          - path: /doctor(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: doctorservice
                port:
                  number: 8082

          - path: /appointment(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: appointment
                port:
                  number: 8083

          - path: /notification(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: notification
                port:
                  number: 8085

          - path: /gateway(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway
                port:
                  number: 8765

          - path: /billing(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: billing
                port:
                  number: 8087

          - path: /ai-diagnostics(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ai-diagnostics
                port:
                  number: 8086
